# Airbnb

./: .gitignore  Pipfile  README.md
airbnb_poetry/: .gitignore  pyproject.toml
airbnb_poetry/bookings/: admin.py  models.py
airbnb_poetry/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
airbnb_poetry/categories/: admin.py  models.py  serializers.py  views.py
airbnb_poetry/categories/migrations/: 0001_initial.py
airbnb_poetry/common/: models.py  permissions.py
airbnb_poetry/config/: schema.py  settings.py  urls.py
airbnb_poetry/direct_messages/: admin.py  models.py
airbnb_poetry/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
airbnb_poetry/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
airbnb_poetry/experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_rename_detail_perk_details.py
airbnb_poetry/medias/: models.py  urls.py  views.py
airbnb_poetry/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py  (+1 more)
airbnb_poetry/reviews/: admin.py  models.py  serializer.py
airbnb_poetry/rooms/: admin.py  models.py  schema.py  serializer.py  serializers.py  tests.py  types.py  urls.py  views.py
airbnb_poetry/users/: admin.py  models.py  serializers.py  urls.py  views.py
airbnb_poetry/wishlists/: models.py  serializer.py  serializers.py  urls.py  views.py
(+71 files in other folders)
